# mgmake

./: .gitignore  CMakeLists.txt  README.md  build.cxx  build.sh  builder  graph.dot  mgmake.hxx
docs/reference/: build-cxx.md  index.md  single-header.md
docs/reference/tools/: amalgamate.md
examples/hello_world/: build  build.cxx  build.sh  hello_world  main.cxx
examples/using_cmake/: build.cxx  main.cxx
include/: mgmake.hxx
include/mgmake/: config.hxx  mgmake.hxx
include/mgmake/acquire/: context.hxx  context_impl.hxx  fetched.hxx  plan.hxx  result.hxx
include/mgmake/backend/: capabilities.hxx  execute.hxx  graphviz.hxx  ninja.hxx  registry.hxx  traits.hxx
include/mgmake/cli/: action.hxx  backend.hxx  config.hxx  default_actions.hxx  default_options.hxx  dispatcher.hxx  entry.hxx  enum_value_parser.hxx  help.hxx  option.hxx  option_builder.hxx  option_parse_result.hxx  option_parser.hxx  option_storage.hxx  options.hxx  parse.hxx  parse_result.hxx  parser.hxx  util.hxx  value_parser.hxx
include/mgmake/configure/: context.hxx  context_impl.hxx  plan.hxx  result.hxx
include/mgmake/dag/: action.hxx  artifact.hxx  emitter.hxx  execute.hxx  graph.hxx  target.hxx
include/mgmake/dep/: database.hxx  file.hxx  format.hxx  parser.hxx
include/mgmake/detail/: assert.hxx  convert.hxx  enum.hxx  enum_flag.hxx  enum_string.hxx  extract_type.hxx  graphviz.hxx  hashes.hxx  index_bit.hxx  member_traits.hxx  poof.hxx  project_factory.hxx  static_string.hxx  type_list.hxx
include/mgmake/discovery/: cache.hxx  mode.hxx  (+23 more)
tests/: cli_parser.cxx
tools/: amalgamate.py
(+123 files in other folders)
